# edisco-partition

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
edisco_partition/: __init__.py  data.py  inference.py  model.py  sampler.py  solver.py
edisco_partition/data/: __init__.py  graph.py  instance.py
edisco_partition/evaluation/: __init__.py  lkh_routing.py  nn_routing.py  reviser_routing.py
edisco_partition/glop/: __init__.py
edisco_partition/glop/nets/: __init__.py  attention_local.py  graph_encoder.py
edisco_partition/glop/problems/: __init__.py
edisco_partition/glop/problems/local/: __init__.py  problem_local.py  state_local.py
edisco_partition/glop/problems/tsp/: __init__.py  problem_tsp.py
edisco_partition/glop/utils/: __init__.py  beam_search.py  boolmask.py  functions.py  insertion.py  lexsort.py  tensor_functions.py
edisco_partition/models/: __init__.py  egnn.py  partition_net.py
edisco_partition/sampler/: __init__.py  sequential.py
edisco_partition/utils/: __init__.py  helpers.py
examples/: quick_start.py
pretrained/Partitioner/cvrp/: cvrp-1000.pt  cvrp-2000-cvrplib.pt  cvrp-2000.pt
pretrained/Partitioner/pctsp/: pctsp-1000.pt  pctsp-500.pt  pctsp-5000.pt
pretrained/edisco/: EGNN.ipynb
scripts/: eval_cvrp_with_tsp.py  evaluate.py  train.py  train_glop.py  train_heatmap.py
